<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/titulo_imc"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtAltura"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:digits="0123456789,"
        android:gravity="center"
        android:hint="@string/altura_hint"
        android:inputType="number"
        android:maxLength="4" />

    <EditText
        android:id="@+id/edtPeso"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtAltura"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:digits="0123456789,"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/peso_hint"
        android:inputType="number"
        android:maxLength="6" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPeso"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/calcular_imc" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCalcular"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/resultado"
        android:textColor="@color/black"
        android:textSize="20sp" />


</RelativeLayout>